--- a/test.ipynb
+++ b/test.ipynb
@@ -2,46 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[96, 120, 70]\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "pop index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/qw/djp0xs7j7v9fdwx5ny2gqy140000gn/T/ipykernel_4046/3994895251.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprogresses\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprogresses\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m         \u001b[0mprogresses\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprogresses\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m         \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprogresses\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: pop index out of range"
+      "2\n"
      ]
     }
    ],
    "source": [
-    "\n"
+    "n,k = 25,5\n",
+    "\n",
+    "# n이 1이 될 때까지 -1 혹은 나누는 과정을 수행해야하는 최소 횟수를 구하는 프로그램\n",
+    "cnt = 0\n",
+    "\n",
+    "while True:\n",
+    "    div = n % k # 나눌 수 있는 최대 수를 제외한 나머지\n",
+    "    if n % k == 0: # 바로 나누어 떨어지는 수면\n",
+    "        n //= k # \n",
+    "        cnt += 1\n",
+    "    elif n == 1: # n이 1에 도달하면\n",
+    "        break\n",
+    "    else: # 나누어 떨어지지 않는 수라면\n",
+    "        n -= div # 나누어 떨어질 수 있는 수까지만 빼기\n",
+    "        cnt += div # 뺀 수 count에 더하기(한 번에 -1 이므로)\n",
+    "\n",
+    "print(cnt)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   "hash": "545e036c4b32438aced1f6b3c8d38ca151d9c36189e05839cb0aa568fda70ddd"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.10 64-bit",
+   "display_name": "Python",
    "language": "python",
    "name": "python3"
   },
