--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -14,21 +14,17 @@
     }
    ],
    "source": [
-    "n,k = 25,5\n",
+    "knight = list(''.join(input())) # 리스트로 받아오기\n",
     "\n",
-    "# n이 1이 될 때까지 -1 혹은 나누는 과정을 수행해야하는 최소 횟수를 구하는 프로그램\n",
-    "cnt = 0\n",
+    "knight[0] = ord(knight[0])-96 #행의 알파벳을 숫자로 변경\n",
+    "knight[1] = int(knight[1]) # 문자열로 받은 열을 숫자로 변경\n",
+    "moves = [(-2,-1),(-2,1),(2,-1),(2,1),(-1,-2),(-1,2),(1,-2),(1,2)] # 나이트가 움직일 수 있는 경우의 수\n",
     "\n",
-    "while True:\n",
-    "    div = n % k # 나눌 수 있는 최대 수를 제외한 나머지\n",
-    "    if n % k == 0: # 바로 나누어 떨어지는 수면\n",
-    "        n //= k # \n",
-    "        cnt += 1\n",
-    "    elif n == 1: # n이 1에 도달하면\n",
-    "        break\n",
-    "    else: # 나누어 떨어지지 않는 수라면\n",
-    "        n -= div # 나누어 떨어질 수 있는 수까지만 빼기\n",
-    "        cnt += div # 뺀 수 count에 더하기(한 번에 -1 이므로)\n",
+    "cnt = 0 # 움직일 수 있는 자리의 개수\n",
+    "for move in moves:\n",
+    "    now = [x+y for x,y in zip(knight,move)] # 나이트가 움직일 수 있는 경우의 수를 현재 위치와 더함(이동)\n",
+    "    if min(now) > 0 and max(now) < 9: # 더한 자리의 최솟값이 1 이상이고, 최댓값이 8 이하면 체스판 안에 있으므로\n",
+    "        cnt += 1 # 움직일 수 있는 자리이다.\n",
     "\n",
     "print(cnt)"
    ]
