--- a/test.ipynb
+++ b/test.ipynb
@@ -2,37 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3, 3, 6]\n",
-      "[2, 2, 2]\n",
-      "[6, 2, 5]\n",
-      "12000\n"
+      "[1, 0, 1, 1, 1, 0, 0, 1, 1, 0]\n",
+      "1\n",
+      "0\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "0\n",
+      "0\n",
+      "1\n",
+      "1\n",
+      "0\n",
+      "10\n"
      ]
     }
    ],
    "source": [
-    "money_lst = []\n",
+    "# 점수 계산\n",
     "\n",
-    "for i in range(int(input())):\n",
-    "    dice = list(map(int,input().split()))\n",
-    "    print(dice)\n",
-    "    if len(set(dice)) == 1:\n",
-    "        money_lst.append(10000 + dice[0] * 1000) \n",
-    "    elif len(set(dice)) == 2:\n",
-    "        tmp = dice[0]\n",
-    "        for j in range(1, len(dice)):\n",
-    "            if tmp == dice[j]:\n",
-    "                money_lst.append(1000 + tmp * 100)\n",
+    "n = int(input())\n",
+    "score_lst = list(map(int, input().split()))\n",
+    "now = 0\n",
+    "score = 0\n",
+    "for i in score_lst:\n",
+    "    if i == 1:\n",
+    "        now += 1\n",
+    "        score += now\n",
     "    else:\n",
-    "        money_lst.append(max(dice) * 100)\n",
+    "        now = 0\n",
     "\n",
-    "print(max(money_lst))"
+    "print(score)\n"
    ]
   }
  ],
