--- a/test.ipynb
+++ b/test.ipynb
@@ -9,36 +9,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 0, 1, 1, 1, 0, 0, 1, 1, 0]\n",
-      "1\n",
-      "0\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "0\n",
-      "0\n",
-      "1\n",
-      "1\n",
-      "0\n",
-      "10\n"
+      "['l', 'e', 'v', 'e', 'l']\n",
+      "['l', 'e', 'v', 'e', 'l']\n",
+      "YES\n",
+      "['m', 'o', 'o', 'n']\n",
+      "['n', 'o', 'o', 'm']\n",
+      "NO\n",
+      "['a', 'b', 'c', 'b', 'a']\n",
+      "['a', 'b', 'c', 'b', 'a']\n",
+      "YES\n",
+      "['s', 'o', 'o', 'n']\n",
+      "['n', 'o', 'o', 's']\n",
+      "NO\n",
+      "['g', 'o', 'o', 'g']\n",
+      "['g', 'o', 'o', 'g']\n",
+      "YES\n"
      ]
     }
    ],
    "source": [
-    "# 점수 계산\n",
-    "\n",
-    "n = int(input())\n",
-    "score_lst = list(map(int, input().split()))\n",
-    "now = 0\n",
-    "score = 0\n",
-    "for i in score_lst:\n",
-    "    if i == 1:\n",
-    "        now += 1\n",
-    "        score += now\n",
+    "for i in range(int(input())):\n",
+    "    txt = ','.join(input().lower()).split(',')\n",
+    "    txt_reverse = []\n",
+    "    for j in range(len(txt)):\n",
+    "        txt_reverse.append(txt[-(j+1)])\n",
+    "    if txt == txt_reverse:\n",
+    "        print('YES')\n",
     "    else:\n",
-    "        now = 0\n",
-    "\n",
-    "print(score)\n"
+    "        print('NO')"
    ]
   }
  ],
