--- a/test.ipynb
+++ b/test.ipynb
@@ -2,41 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['l', 'e', 'v', 'e', 'l']\n",
-      "['l', 'e', 'v', 'e', 'l']\n",
-      "YES\n",
-      "['m', 'o', 'o', 'n']\n",
-      "['n', 'o', 'o', 'm']\n",
-      "NO\n",
-      "['a', 'b', 'c', 'b', 'a']\n",
-      "['a', 'b', 'c', 'b', 'a']\n",
-      "YES\n",
-      "['s', 'o', 'o', 'n']\n",
-      "['n', 'o', 'o', 's']\n",
-      "NO\n",
-      "['g', 'o', 'o', 'g']\n",
-      "['g', 'o', 'o', 'g']\n",
-      "YES\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "Interrupted by user",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/songy/Documents/Codes/Algorithm/test.ipynb Cell 1'\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/songy/Documents/Codes/Algorithm/test.ipynb#ch0000004?line=0'>1</a>\u001b[0m card_lst \u001b[39m=\u001b[39m [i \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m,\u001b[39m20\u001b[39m\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m)]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/songy/Documents/Codes/Algorithm/test.ipynb#ch0000004?line=2'>3</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m10\u001b[39m):\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/songy/Documents/Codes/Algorithm/test.ipynb#ch0000004?line=3'>4</a>\u001b[0m     area \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(\u001b[39mmap\u001b[39m(\u001b[39mint\u001b[39m, \u001b[39minput\u001b[39;49m()\u001b[39m.\u001b[39msplit()))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/songy/Documents/Codes/Algorithm/test.ipynb#ch0000004?line=4'>5</a>\u001b[0m     area_lst \u001b[39m=\u001b[39m []\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/songy/Documents/Codes/Algorithm/test.ipynb#ch0000004?line=5'>6</a>\u001b[0m     tmp_lst \u001b[39m=\u001b[39m []\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/pject/lib/python3.8/site-packages/ipykernel/kernelbase.py:1076\u001b[0m, in \u001b[0;36mKernel.raw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m   <a href='file:///Users/songy/opt/anaconda3/envs/pject/lib/python3.8/site-packages/ipykernel/kernelbase.py?line=1071'>1072</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_allow_stdin:\n\u001b[1;32m   <a href='file:///Users/songy/opt/anaconda3/envs/pject/lib/python3.8/site-packages/ipykernel/kernelbase.py?line=1072'>1073</a>\u001b[0m     \u001b[39mraise\u001b[39;00m StdinNotImplementedError(\n\u001b[1;32m   <a href='file:///Users/songy/opt/anaconda3/envs/pject/lib/python3.8/site-packages/ipykernel/kernelbase.py?line=1073'>1074</a>\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   <a href='file:///Users/songy/opt/anaconda3/envs/pject/lib/python3.8/site-packages/ipykernel/kernelbase.py?line=1074'>1075</a>\u001b[0m     )\n\u001b[0;32m-> <a href='file:///Users/songy/opt/anaconda3/envs/pject/lib/python3.8/site-packages/ipykernel/kernelbase.py?line=1075'>1076</a>\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_input_request(\n\u001b[1;32m   <a href='file:///Users/songy/opt/anaconda3/envs/pject/lib/python3.8/site-packages/ipykernel/kernelbase.py?line=1076'>1077</a>\u001b[0m     \u001b[39mstr\u001b[39;49m(prompt),\n\u001b[1;32m   <a href='file:///Users/songy/opt/anaconda3/envs/pject/lib/python3.8/site-packages/ipykernel/kernelbase.py?line=1077'>1078</a>\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_parent_ident[\u001b[39m\"\u001b[39;49m\u001b[39mshell\u001b[39;49m\u001b[39m\"\u001b[39;49m],\n\u001b[1;32m   <a href='file:///Users/songy/opt/anaconda3/envs/pject/lib/python3.8/site-packages/ipykernel/kernelbase.py?line=1078'>1079</a>\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mget_parent(\u001b[39m\"\u001b[39;49m\u001b[39mshell\u001b[39;49m\u001b[39m\"\u001b[39;49m),\n\u001b[1;32m   <a href='file:///Users/songy/opt/anaconda3/envs/pject/lib/python3.8/site-packages/ipykernel/kernelbase.py?line=1079'>1080</a>\u001b[0m     password\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m,\n\u001b[1;32m   <a href='file:///Users/songy/opt/anaconda3/envs/pject/lib/python3.8/site-packages/ipykernel/kernelbase.py?line=1080'>1081</a>\u001b[0m )\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/pject/lib/python3.8/site-packages/ipykernel/kernelbase.py:1121\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m   <a href='file:///Users/songy/opt/anaconda3/envs/pject/lib/python3.8/site-packages/ipykernel/kernelbase.py?line=1117'>1118</a>\u001b[0m             \u001b[39mbreak\u001b[39;00m\n\u001b[1;32m   <a href='file:///Users/songy/opt/anaconda3/envs/pject/lib/python3.8/site-packages/ipykernel/kernelbase.py?line=1118'>1119</a>\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyboardInterrupt\u001b[39;00m:\n\u001b[1;32m   <a href='file:///Users/songy/opt/anaconda3/envs/pject/lib/python3.8/site-packages/ipykernel/kernelbase.py?line=1119'>1120</a>\u001b[0m     \u001b[39m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[0;32m-> <a href='file:///Users/songy/opt/anaconda3/envs/pject/lib/python3.8/site-packages/ipykernel/kernelbase.py?line=1120'>1121</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyboardInterrupt\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mInterrupted by user\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39m\n\u001b[1;32m   <a href='file:///Users/songy/opt/anaconda3/envs/pject/lib/python3.8/site-packages/ipykernel/kernelbase.py?line=1121'>1122</a>\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m:\n\u001b[1;32m   <a href='file:///Users/songy/opt/anaconda3/envs/pject/lib/python3.8/site-packages/ipykernel/kernelbase.py?line=1122'>1123</a>\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlog\u001b[39m.\u001b[39mwarning(\u001b[39m\"\u001b[39m\u001b[39mInvalid Message:\u001b[39m\u001b[39m\"\u001b[39m, exc_info\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
      ]
     }
    ],
    "source": [
-    "for i in range(int(input())):\n",
-    "    txt = ','.join(input().lower()).split(',')\n",
-    "    txt_reverse = []\n",
-    "    for j in range(len(txt)):\n",
-    "        txt_reverse.append(txt[-(j+1)])\n",
-    "    if txt == txt_reverse:\n",
-    "        print('YES')\n",
-    "    else:\n",
-    "        print('NO')"
+    "card_lst = [i for i in range(1,20+1)]\n",
+    "\n",
+    "for i in range(10):\n",
+    "    area = list(map(int, input().split()))\n",
+    "    area_lst = []\n",
+    "    tmp_lst = []\n",
+    "    area_lst = card_lst[area[0]-1:area[1]]\n",
+    "    tmp_lst = card_lst[area[1]:]\n",
+    "    card_lst = card_lst[:area[0]-1]\n",
+    "    for _ in range(len(area_lst)):\n",
+    "        card_lst.append(area_lst.pop())\n",
+    "    for k in tmp_lst:\n",
+    "        card_lst.append(k)\n",
+    "\n",
+    "for i in card_lst:\n",
+    "    print(i, end = ' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 인프런 풀이\n",
+    "\n",
+    "a = [i for i in range(1,20+1)]\n",
+    "for _ in range(10):\n",
+    "    s, e = map(int, input().split())\n",
+    "    for i in range((e-s+1)//2):\n",
+    "        a[s+i], a[e-i] = a[e-i], a[s+i]\n"
    ]
   }
  ],
