--- a/test.ipynb
+++ b/test.ipynb
@@ -47,6 +47,59 @@
     "\n",
     "print(cnt)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "155\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 5\n",
+    "\n",
+    "# lattice = [list(map(int, input().split())) for i in range(n)]\n",
+    "lattice = [[10, 13, 10, 12, 15], [12, 39, 30, 23, 11], [11, 25, 50, 53, 15], [19, 27, 29, 37, 27], [19, 13, 30, 13, 19]]\n",
+    "# print(lattice)\n",
+    "\n",
+    "# 행의 합, 열의 합, 두 대각선의 합 중 가장 큰 합 출력\n",
+    "# 1) 행의 합 -> \n",
+    "max_v = sum(lattice[0])\n",
+    "tmp = 0\n",
+    "# print(max_v)\n",
+    "for row in lattice:\n",
+    "    if sum(row) > max_v:\n",
+    "        max_v = sum(row)\n",
+    "\n",
+    "# 2) 열의 합\n",
+    "for i in range(n):\n",
+    "    max_v = max(tmp, max_v)\n",
+    "    tmp = 0\n",
+    "    for j in range(n):\n",
+    "        tmp += lattice[j][i]\n",
+    "tmp = 0\n",
+    "\n",
+    "# 3-1) 왼쪽 위부터 대각선의 합\n",
+    "for i in range(n):\n",
+    "    tmp += lattice[i][i]\n",
+    "max_v = max(tmp, max_v)\n",
+    "tmp = 0\n",
+    "\n",
+    "# 3-2) 오른쪽 위부터 대각선의 합\n",
+    "for i in range(n-1, -1, -1):\n",
+    "    tmp += lattice[(n-1)-i][i]\n",
+    "max_v = max(tmp, max_v)\n",
+    "\n",
+    "print(max_v)\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
