--- a/test.ipynb
+++ b/test.ipynb
@@ -100,6 +100,18 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = int(input())\n",
+    "if n % 3 == 0:\n",
+    "    n //= 3\n",
+    "    \n"
+   ]
   }
  ],
  "metadata": {
