--- a/test.ipynb
+++ b/test.ipynb
@@ -112,6 +112,56 @@
     "    n //= 3\n",
     "    \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1300\n"
+     ]
+    }
+   ],
+   "source": [
+    "# BOJ _ 2480\n",
+    "\n",
+    "money_lst = [] # 상금 저장할 리스트 초기화\n",
+    "\n",
+    "# 세 개의 주사위 던져서 같은 눈 수에 따라 게산\n",
+    "\n",
+    "dice = list(map(int,input().split()))\n",
+    "if len(set(dice)) == 1: # 세 주사위의 눈이 다 같으면\n",
+    "    money_lst.append(10000 + dice[0] * 1000) \n",
+    "elif len(set(dice)) == 2: # 주사위의 눈이 두 개만 같으면\n",
+    "    tmp = dice[0] # 같은 눈을 저장할 변수\n",
+    "    for j in range(1, len(dice)):\n",
+    "        if tmp == dice[j]: # 같은 눈이 나오면 그 눈으로 계산\n",
+    "            money_lst.append(1000 + tmp * 100)\n",
+    "else: # 같은 눈이 하나도 없으면\n",
+    "    money_lst.append(max(dice) * 100)\n",
+    "\n",
+    "print(max(money_lst))\n",
+    "\n",
+    "\n",
+    "# 다른 풀이\n",
+    "a, b, c = map(int, input().split())\n",
+    " \n",
+    "if a == b and b == c:    # 3개가 동일한 경우\n",
+    "    print(10000 + (a * 1000))\n",
+    " \n",
+    "elif a == b or b == c:    # 2개가 동일한 경우\n",
+    "    print(1000 + (b * 100))\n",
+    " \n",
+    "elif a == c:    # 2개가 동일한 경우\n",
+    "    print(1000 + (a * 100))\n",
+    " \n",
+    "else:    # 모두 다른 경우\n",
+    "    print(max(a, b, c)*100)"
+   ]
   }
  ],
  "metadata": {
