--- a/test.ipynb
+++ b/test.ipynb
@@ -2,38 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "apples [10]\n",
-      "1\n",
-      "apples [39, 30, 23]\n",
-      "2\n",
-      "apples [11, 25, 50, 53, 15]\n",
-      "3\n",
-      "[27, 29, 37]\n",
-      "4\n",
-      "[30]\n",
-      "379\n"
+      "362\n"
      ]
     }
    ],
    "source": [
-    "n = int(input())\n",
-    "apples = [list(map(int, input().split())) for i in range(n)]\n",
-    "get = 0\n",
+    "from collections import deque\n",
+    "n = 5\n",
+    "mat = [list(map(int, input().split())) for _ in range(n)]\n",
+    "\n",
+    "m = int(input())\n",
+    "\n",
+    "# 회전하기\n",
+    "for i in range(m):\n",
+    "    row, direction, num = map(int, input().split())\n",
+    "    now = deque(mat[row-1])\n",
+    "    if direction == 0:\n",
+    "        now.rotate(-num)\n",
+    "    else:\n",
+    "        now.rotate(num)\n",
+    "    mat[row-1]=list(now)\n",
+    "\n",
+    "# 감 개수 세기\n",
+    "persi = 0\n",
+    "s = 0\n",
     "for i in range(n):\n",
     "    if i <= n//2:\n",
-    "        get += sum(apples[i][(n // 2) - i:(n // 2) + i+1])\n",
-    "\n",
+    "        persi += sum(mat[i][s:n-s])\n",
+    "        s += 1\n",
+    "    \n",
     "    else:\n",
-    "        get += sum(apples[i][- (n + n // 2) + i:(n // 2) - i])\n",
-    "print(get)"
+    "        s -= 1\n",
+    "        persi += sum(mat[i][s-1:n-s+1])\n",
+    "\n",
+    "print(persi)"
    ]
   }
  ],
