--- a/test_thisiscote.ipynb
+++ b/test_thisiscote.ipynb
@@ -2,121 +2,79 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "각 원소가 속한 집합:  1 1 1 1 5 5 \n",
-      "부모 테이블: 1 1 2 1 5 5 "
+      "[0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[[], [], [], [], [], [], [], []]\n"
      ]
     }
    ],
    "source": [
-    "# 기본적인 서로소 집합 알고리즘 소스코드\n",
+    "# 도시 분할 계획\n",
     "\n",
     "# 특정 원소가 속한 집합을 찾기\n",
     "def find_parent(parent, x):\n",
-    "    # 루트 노드가 아니라면, 루트 노드를 찾을 때까지 재귀적으로 호출\n",
-    "    if parent[x] != x:\n",
-    "        return find_parent(parent, parent[x])\n",
-    "    return x\n",
-    "\n",
-    "# 두 원소가 속한 집합을 합치기\n",
-    "def union_parent(parent, a, b):\n",
-    "    a = find_parent(parent, a)\n",
-    "    b = find_parent(parent, b)\n",
-    "    if a < b:\n",
-    "        parent[b] = a\n",
-    "    else:\n",
-    "        parent[a] = b\n",
-    "\n",
-    "# 노드의 개수와 간선(union 연산)의 개수 입력받기\n",
-    "v, e = map(int, input().split())\n",
-    "parent = [0] * (v + 1) # 부모 테이블 초기화\n",
-    "\n",
-    "# 부모 테이블상에서, 부모를 자기 자신으로 초기화\n",
-    "for i in range(1, v + 1):\n",
-    "    parent[i] = i\n",
-    "\n",
-    "# union 연산을 각자 수행\n",
-    "for i in range(e):\n",
-    "    a, b = map(int, input().split())\n",
-    "    union_parent(parent, a, b)\n",
-    "\n",
-    "# 각 원소가 속한 집합 출력\n",
-    "print('각 원소가 속한 집합: ', end=' ')\n",
-    "for i in range(1, v + 1):\n",
-    "    print(find_parent(parent, i), end= ' ')\n",
-    "\n",
-    "print()\n",
-    "\n",
-    "# 부모 테이블 내용 출력\n",
-    "print('부모 테이블: ', end='')\n",
-    "for i in range(1, v + 1):\n",
-    "    print(parent[i], end= ' ')\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 개선된 서로소 집합 알고리즘 소스코드\n",
-    "\n",
-    "# 특정 원소가 속한 집합을 찾기\n",
-    "def find_parent(parent, x):\n",
-    "    # 루트 노드가 아니라면, 루트 노드를 찾을 때까지 재귀적으로 호출\n",
+    "    # 루트 노드가 아니면 루트 노드를 찾을 때까지 재귀적으로 호출\n",
     "    if parent[x] != x:\n",
     "        parent[x] = find_parent(parent, parent[x])\n",
     "    return parent[x]\n",
     "\n",
-    "# 두 원소가 속한 집합을 합치기\n",
+    "# 두 원소가 속한 집합을 찾기\n",
     "def union_parent(parent, a, b):\n",
     "    a = find_parent(parent, a)\n",
     "    b = find_parent(parent, b)\n",
-    "    if a < b:\n",
+    "    if a > b:\n",
     "        parent[b] = a\n",
     "    else:\n",
     "        parent[a] = b\n",
     "\n",
-    "# 노드의 개수와 간선(union 연산)의 개수 입력받기\n",
+    "# 노드와 간선 입력받기\n",
     "v, e = map(int, input().split())\n",
+    "# 부모 테이블 초기화\n",
     "parent = [0] * (v + 1)\n",
     "\n",
-    "# 부모 테이블상에서, 부모를 자기 자신으로 초기화\n",
+    "# 모든 간선을 담을 리스트와 최종 비용을 담을 변수\n",
+    "edges = []\n",
+    "result = 0\n",
+    "\n",
+    "# 부모 테이블상의 원소를 자기 자신으로\n",
     "for i in range(1, v + 1):\n",
     "    parent[i] = i\n",
     "\n",
-    "# union 연산을 각자 수행\n",
-    "for i in range(e):\n",
-    "    a, b = map(int, input().split())\n",
-    "    union_parent(parent, a, b)\n",
+    "# 모든 간선에 대한 정보를 입력받기\n",
+    "for _ in range(e):\n",
+    "    a, b, cost = map(int, input().split())\n",
+    "    # 비용순으로 출력하기 위해서 튜플의 첫번째 원소를 비용으로 설정\n",
+    "    edges.append((cost, a, b))\n",
     "\n",
-    "# 각 원소가 속한 집합 출력\n",
-    "print('각 원소가 속한 집합: ', end=' ')\n",
-    "for i in range(1, v + 1):\n",
-    "    print(find_parent(parent, i), end= ' ')\n",
+    "# 간선을 비용순으로 정렬\n",
+    "edges.sort()\n",
+    "last = 0 # 최소 신장 트리에 포함되는 간선 중에서 가장 비용이 큰 간선\n",
     "\n",
-    "print()\n",
+    "# 간선을 하나씩 확인하며\n",
+    "for edge in edges:\n",
+    "    cost, a, b = edge\n",
+    "    # 사이클이 발생하지 않는 경우에만 부모 합침\n",
+    "    if find_parent(parent, a) != find_parent(parent, b):\n",
+    "        union_parent(parent, a, b)\n",
+    "        result += cost\n",
+    "        last = cost # 간선을 비용순으로 정렬하였으므로 가장 마지막의 cost가 가장 비용이 큰 간선이다.\n",
     "\n",
-    "# 부모 테이블 내용 출력\n",
-    "print('부모 테이블: ', end='')\n",
-    "for i in range(1, v + 1):\n",
-    "    print(parent[i], end= ' ')\n"
+    "print(result - last)\n"
    ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "bd3d58ff110ee7ae9f10d65de180a0b6bdaa2c52ad1bc58c5755cce6f6f92217"
+   "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.9.12 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -130,7 +88,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
