--- a/test_thisiscote.ipynb
+++ b/test_thisiscote.ipynb
@@ -67,6 +67,61 @@
     "\n",
     "print(result - last)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 1, 1, 2, 1]\n",
+      "[[], [2, 3, 4], [], [4, 5], [], []]\n",
+      "[0, 10, 10, 4, 4, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 커리큘럼\n",
+    "\n",
+    "from collections import deque\n",
+    "import copy\n",
+    "\n",
+    "v = int(input())\n",
+    "indegree = [0] * (v + 1)\n",
+    "graph = [[] for _ in range(v + 1)]\n",
+    "lec = [0] * (v + 1)\n",
+    "\n",
+    "# 방향 그래프의 간선 정보 입력받기\n",
+    "for i in range(1, v + 1):\n",
+    "    data = list(map(int, input().split()))\n",
+    "    lec[i] = data[0] # 첫번째 원소는 강의 시간을 담고 있음\n",
+    "    for x in data[1:-1]: # 1번째 원소부터 -1 전의 원소까지는 필요한 강의 번호\n",
+    "        indegree[i] += 1 # 하나씩 방문해야하므로 차수에 1 더하기\n",
+    "        graph[x].append(i) # \n",
+    "\n",
+    "# indegree [0, 0, 1, 1, 2, 1]\n",
+    "# graph [[], [2, 3, 4], [], [4, 5], [], []]\n",
+    "# lec [0, 10, 10, 4, 4, 3]\n",
+    "# result [0, 10, 10, 4, 4, 3]\n",
+    "\n",
+    "# 위상 정렬 함수\n",
+    "def topology_sort():\n",
+    "    result = copy.deepcopy(lec)\n",
+    "    q = deque()\n",
+    "\n",
+    "    for i in range(1, v + 1):\n",
+    "        if indegree[i] == 0:\n",
+    "            q.append(i)\n",
+    "\n",
+    "    while q:\n",
+    "        now = q.popleft()\n",
+    "        for i in graph[now]:\n",
+    "            result[i] = max(result[i], result[now] + lec[i])\n",
+    "            indegree[i] -= 1"
+   ]
   }
  ],
  "metadata": {
