--- a/test_thisiscote.ipynb
+++ b/test_thisiscote.ipynb
@@ -44,6 +44,33 @@
     "\n",
     "topology_sort()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 그리디 _ 문자열 뒤집기\n",
+    "\n",
+    "data = input()\n",
+    "count0 = 0\n",
+    "count1 = 0\n",
+    "\n",
+    "if data[0] == '1':\n",
+    "    count0 += 1\n",
+    "else:\n",
+    "    count1 += 1\n",
+    "\n",
+    "for i in range(len(data) - 1):\n",
+    "    if data[i] != data[i + 1]:\n",
+    "        if data[i] == '1':\n",
+    "            count0 += 1\n",
+    "        else:\n",
+    "            count1 += 1\n",
+    "\n",
+    "print(min(count0, count1))"
+   ]
   }
  ],
  "metadata": {
