--- a/test.ipynb
+++ b/test.ipynb
@@ -2,47 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "362\n"
+      "[80, 50]\n"
      ]
     }
    ],
    "source": [
-    "from collections import deque\n",
-    "n = 5\n",
-    "mat = [list(map(int, input().split())) for _ in range(n)]\n",
+    "# 최소 직사각형\n",
     "\n",
-    "m = int(input())\n",
+    "data = [[60, 50], [30, 70], [60, 30], [80, 40]]\n",
+    "wallet = data[0]\n",
     "\n",
-    "# 회전하기\n",
-    "for i in range(m):\n",
-    "    row, direction, num = map(int, input().split())\n",
-    "    now = deque(mat[row-1])\n",
-    "    if direction == 0:\n",
-    "        now.rotate(-num)\n",
-    "    else:\n",
-    "        now.rotate(num)\n",
-    "    mat[row-1]=list(now)\n",
+    "for i in data:\n",
+    "    if i[0] < i[1]:\n",
+    "        i[0], i[1] = i[1], i[0]\n",
+    "    wallet[0] = max(wallet[0], i[0])\n",
+    "    wallet[1] = max(wallet[1], i[1])\n",
     "\n",
-    "# 감 개수 세기\n",
-    "persi = 0\n",
-    "s = 0\n",
-    "for i in range(n):\n",
-    "    if i <= n//2:\n",
-    "        persi += sum(mat[i][s:n-s])\n",
-    "        s += 1\n",
-    "    \n",
-    "    else:\n",
-    "        s -= 1\n",
-    "        persi += sum(mat[i][s-1:n-s+1])\n",
-    "\n",
-    "print(persi)"
+    "print(wallet)"
    ]
   }
  ],
