--- a/test.ipynb
+++ b/test.ipynb
@@ -2,30 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[80, 50]\n"
+      "4000\n"
      ]
     }
    ],
    "source": [
-    "# 최소 직사각형\n",
+    "# Programmers _ Lv 1 _ 최소 직사각형\n",
     "\n",
-    "data = [[60, 50], [30, 70], [60, 30], [80, 40]]\n",
-    "wallet = data[0]\n",
     "\n",
-    "for i in data:\n",
-    "    if i[0] < i[1]:\n",
-    "        i[0], i[1] = i[1], i[0]\n",
-    "    wallet[0] = max(wallet[0], i[0])\n",
-    "    wallet[1] = max(wallet[1], i[1])\n",
-    "\n",
-    "print(wallet)"
+    "def solution(sizes):\n",
+    "    # 명함 크기 저장할 변수\n",
+    "    wallet = sizes[0]\n",
+    "    for i in sizes:\n",
+    "        # 가로 길이보다 세로 길이가 길면\n",
+    "        if i[0] < i[1]:\n",
+    "            # 명함 회전\n",
+    "            i[0], i[1] = i[1], i[0]\n",
+    "        # 지갑의 크기와 명함의 크기 비교 후 큰 값을 지갑의 크기로 선택\n",
+    "        wallet[0] = max(wallet[0], i[0])\n",
+    "        wallet[1] = max(wallet[1], i[1])\n",
+    "        # 면적 크기\n",
+    "        answer = wallet[0] * wallet[1]\n",
+    "    return answer"
    ]
   }
  ],
