이코테_구현

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,35 +2,71 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4000\n"
+      "quo, divided 1 2\n",
+      "[2, 1]\n",
+      "0\n",
+      "1\n"
      ]
     }
    ],
    "source": [
-    "# Programmers _ Lv 1 _ 최소 직사각형\n",
+    "# 무지의 먹방 라이브\n",
+    "\n",
+    "food_times = [3, 1, 2]\n",
+    "k = 5\n",
+    "\n",
+    "answer = 0\n",
+    "quo = k // len(food_times)\n",
+    "divided = k % len(food_times)\n",
+    "print('quo, divided', quo, divided)\n",
     "\n",
     "\n",
-    "def solution(sizes):\n",
-    "    # 명함 크기 저장할 변수\n",
-    "    wallet = sizes[0]\n",
-    "    for i in sizes:\n",
-    "        # 가로 길이보다 세로 길이가 길면\n",
-    "        if i[0] < i[1]:\n",
-    "            # 명함 회전\n",
-    "            i[0], i[1] = i[1], i[0]\n",
-    "        # 지갑의 크기와 명함의 크기 비교 후 큰 값을 지갑의 크기로 선택\n",
-    "        wallet[0] = max(wallet[0], i[0])\n",
-    "        wallet[1] = max(wallet[1], i[1])\n",
-    "        # 면적 크기\n",
-    "        answer = wallet[0] * wallet[1]\n",
-    "    return answer"
+    "for i in range(len(food_times)):\n",
+    "    food_times[i] -= quo\n",
+    "\n",
+    "for i in food_times:\n",
+    "    if i == 0:\n",
+    "        food_times.pop(food_times[i-1])\n",
+    "\n",
+    "print(food_times)\n",
+    "\n",
+    "for i in range(divided):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "READY\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "n = str(n)\n",
+    "num = [0] * 2\n",
+    "for i in range(len(n)):\n",
+    "    if i < (len(n) // 2): num[0] += int(n[i])\n",
+    "    else:\n",
+    "        num[1] += int(n[i])\n",
+    "\n",
+    "if num[0] == num[1]:\n",
+    "    print(\"LUCKY\")\n",
+    "else:\n",
+    "    print(\"READY\")"
    ]
   }
  ],
