이코테_구현

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,71 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "quo, divided 1 2\n",
-      "[2, 1]\n",
-      "0\n",
-      "1\n"
+      "ABCKK13\n"
      ]
     }
    ],
    "source": [
-    "# 무지의 먹방 라이브\n",
+    "# 이코테 _ 구현 _ 문자열 재정렬\n",
     "\n",
-    "food_times = [3, 1, 2]\n",
-    "k = 5\n",
+    "s = input()\n",
     "\n",
-    "answer = 0\n",
-    "quo = k // len(food_times)\n",
-    "divided = k % len(food_times)\n",
-    "print('quo, divided', quo, divided)\n",
+    "alpha = []\n",
+    "num = 0\n",
     "\n",
-    "\n",
-    "for i in range(len(food_times)):\n",
-    "    food_times[i] -= quo\n",
-    "\n",
-    "for i in food_times:\n",
-    "    if i == 0:\n",
-    "        food_times.pop(food_times[i-1])\n",
-    "\n",
-    "print(food_times)\n",
-    "\n",
-    "for i in range(divided):\n",
-    "    print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 163,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "READY\n"
-     ]
-    }
-   ],
-   "source": [
-    "n = int(input())\n",
-    "n = str(n)\n",
-    "num = [0] * 2\n",
-    "for i in range(len(n)):\n",
-    "    if i < (len(n) // 2): num[0] += int(n[i])\n",
+    "for i in s:\n",
+    "    if i.isdigit() == True:\n",
+    "        num += int(i)\n",
     "    else:\n",
-    "        num[1] += int(n[i])\n",
+    "        alpha += i\n",
     "\n",
-    "if num[0] == num[1]:\n",
-    "    print(\"LUCKY\")\n",
-    "else:\n",
-    "    print(\"READY\")"
+    "alpha.sort()\n",
+    "print(f'{\"\".join(alpha)}{num}')"
    ]
   }
  ],
