--- a/test.ipynb
+++ b/test.ipynb
@@ -2,96 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start deque([3, 1, 2])\n",
-      "0\n",
-      "last deque([1, 2, 2])\n",
-      "deque([1, 2, 2])\n",
-      "start deque([1, 2, 2])\n",
-      "1\n",
-      "last deque([2, 2, 0])\n",
-      "deque([2, 2, 0])\n",
-      "start deque([2, 2, 0])\n",
-      "2\n",
-      "last deque([2, 0, 1])\n",
-      "deque([2, 0, 1])\n",
-      "start deque([2, 0, 1])\n",
-      "3\n",
-      "last deque([0, 1, 1])\n",
-      "deque([1, 1])\n",
-      "start deque([1, 1])\n",
-      "4\n",
-      "last deque([1, 0])\n",
-      "deque([1, 0])\n",
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 무지의 먹방 라이브\n",
-    "\n",
-    "food_times = [3, 1, 2]\n",
-    "k = 5\n",
-    "from collections import deque\n",
-    "\n",
-    "data = deque()\n",
-    "\n",
-    "for i in food_times:\n",
-    "    data.append(i)\n",
-    "\n",
-    "\n",
-    "for i in range(k):\n",
-    "    print('start',data)\n",
-    "    print(i)\n",
-    "\n",
-    "    data[0] -= 1\n",
-    "    data.append(data.popleft())\n",
-    "    print('last',data)\n",
-    "    if data[0] == 0:\n",
-    "        data.popleft()\n",
-    "    print(data)\n",
-    "\n",
-    "print(data[0])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = [1, 2, 3, 4]\n",
-    "m = 3\n",
-    "a.index(a[m])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 146,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['20', '111', '111']\n",
+      "data ['20', '111', '111']\n",
       "i 20\n",
       "j 2\n",
       "j 0\n",
@@ -108,6 +26,8 @@
     }
    ],
    "source": [
+    "#n-tuple\n",
+    "\n",
     "s = \"{{20,111},{111}}\"\n",
     "\n",
     "data = [[] for _ in range(len(s))]\n",
@@ -131,11 +51,10 @@
     "        data = data[i:]\n",
     "        break\n",
     "\n",
-    "\n",
     "for i in range(len(data)):\n",
     "    data[i] = ''.join(data[i])\n",
     "\n",
-    "print(data)\n",
+    "print('data', data)\n",
     "for i in data:\n",
     "    print('i',i)\n",
     "    for j in i:\n",
