--- a/test.ipynb
+++ b/test.ipynb
@@ -2,26 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[[], [], [], [], [], [], [], [], [], [], [], [], [], [], [], []]\n",
+      "[['2', '0'], ['1', '1', '1'], ['1', '1', '1'], [], [], [], [], [], [], [], [], [], [], [], [], []]\n",
+      "[['2', '0'], ['1', '1', '1'], ['1', '1', '1']]\n",
       "data ['20', '111', '111']\n",
-      "i 20\n",
-      "j 2\n",
-      "j 0\n",
-      "i 111\n",
-      "j 1\n",
-      "j 1\n",
-      "j 1\n",
-      "i 111\n",
-      "j 1\n",
-      "j 1\n",
-      "j 1\n",
-      "[2, 0, 1]\n"
+      "[]\n"
      ]
     }
    ],
@@ -33,8 +25,10 @@
     "data = [[] for _ in range(len(s))]\n",
     "answer = []\n",
     "cnt = 0\n",
-    "for i in range(len(s)):\n",
     "\n",
+    "print(data)\n",
+    "\n",
+    "for i in range(len(s)):\n",
     "    if s[i] == '{': \n",
     "        continue\n",
     "    elif s[i].isdecimal():\n",
@@ -42,7 +36,7 @@
     "    elif s[i] == ',':\n",
     "        cnt += 1\n",
     "\n",
-    "\n",
+    "print(data)\n",
     "\n",
     "data.sort(key=len)\n",
     "\n",
@@ -51,53 +45,71 @@
     "        data = data[i:]\n",
     "        break\n",
     "\n",
+    "print(data)\n",
+    "\n",
     "for i in range(len(data)):\n",
     "    data[i] = ''.join(data[i])\n",
     "\n",
     "print('data', data)\n",
-    "for i in data:\n",
-    "    print('i',i)\n",
-    "    for j in i:\n",
-    "        print('j',j)\n",
-    "        if int(j) not in answer:\n",
-    "            answer.append(int(j))\n",
+    "\n",
     "\n",
     "print(answer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['3'], ['2', '3'], ['4', '2', '3'], ['2', '3', '4', '1']]\n",
+      "[3, 2, 4, 1]\n"
+     ]
+    }
+   ],
    "source": [
-    "import heapq\n",
+    "# n - tuple\n",
     "\n",
-    "def solution(food_times, k):\n",
-    "    # 전체 음식을 먹는 시간보다 k가 크거나 같다면 -1\n",
-    "    if sum(food_times) <= k:\n",
-    "        return -1\n",
-    "    \n",
-    "    # 시간이 작은 음식부터 빼야 하므로 우선순위 큐를 이용\n",
-    "    q = []\n",
-    "    for i in range(len(food_times)):\n",
-    "        # (음식 시간, 음식 번호) 형태로 우선순위 큐에 삽입\n",
-    "        heapq.heappush(q, (food_times[i], i + 1))\n",
+    "s = \"{{4,2,3},{3},{2,3,4,1},{2,3}}\"\n",
     "\n",
-    "    sum_value = 0 # 먹기 위해 사용한 시간\n",
-    "    previous = 0 # 직전에 다 먹은 음식 시간\n",
-    "    length = len(food_times) # 남은 음식의 개수\n",
+    "def solution(s):\n",
+    "    data = [[] for _ in range(len(s))] # 숫자를 넣을 리스트 초기화\n",
     "\n",
-    "    # sum_value + (현재의 음식 시간 - 이전 음식 시간) * 현재 음식 개수와 k 비교\n",
-    "    while sum_value + ((q[0][0] - previous) * length) <= k:\n",
-    "        now = heapq.heappop(q)[0]\n",
-    "        sum_value += (now - previous) * length\n",
-    "        length -= 1 # 다 먹은 음식 제외\n",
-    "        previous = now # 이전 음식 시간 재설정\n",
+    "    s = s[1:len(s)-1] # 어차피 집합의 모임이므로, 제일 바깥 괄호 제거\n",
+    "    num = '' # 임시 숫자를 담을 변수\n",
+    "    answer = [] # 정답을 담을 변수\n",
     "\n",
-    "    # 남은 음식 중에서 몇 번째 음식인지 확인하며 출력\n",
-    "    result = sorted(q, key = lambda x: x[1]) # 음식의 번호 기준으로 정렬\n",
-    "    return result[(k - sum_value) % length][1]"
+    "    for i in range(len(s)):\n",
+    "        if s[i] == '{': # {이면 임시 숫자 시작\n",
+    "            now = i\n",
+    "            flag = True\n",
+    "        elif s[i].isdecimal(): # 숫자이면\n",
+    "            num += s[i] # 임시 숫자에 저장\n",
+    "        elif s[i] == ',': # ,가 나오면 같은 리스트 내 다른 숫자인지, 다른 집합인지 구별\n",
+    "            if flag == True: # 같은 리스트 내 다른 숫자이면\n",
+    "                data[now].append(num) # now와 같은 리스트에 더하기\n",
+    "                num = '' # 임시 숫자 초기화\n",
+    "        elif s[i] == '}': # 임시 숫자 입력 끝\n",
+    "            data[now].append(num)\n",
+    "            num = ''\n",
+    "            flag = False\n",
+    "\n",
+    "    data.sort(key=len) # 원소 수대로 정렬\n",
+    "\n",
+    "    for i in range(len(data)): # 빈 리스트 제거\n",
+    "        if len(data[i]) > 0:\n",
+    "            data = data[i:] # 빈 리스트들 삭제\n",
+    "            break\n",
+    "\n",
+    "    for i in data:\n",
+    "        for num in i:\n",
+    "            if int(num) not in answer: # 원소 길이가 1인 리스트부터 하나씩 더해져가며 집합이 생기므로, 중복 제거하여 튜플 만들기\n",
+    "                answer.append(int(num))\n",
+    "\n",
+    "    return answer"
    ]
   }
  ],
